@@ -1,21 +1,11 @@
 package com.sentrysoftware.matrix.common.meta.monitor;
 
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_TYPE;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
-import com.sentrysoftware.matrix.common.helpers.HardwareConstants;
 import com.sentrysoftware.matrix.common.meta.parameter.MetaParameter;
 import com.sentrysoftware.matrix.common.meta.parameter.ParameterType;
 import com.sentrysoftware.matrix.connector.model.monitor.MonitorType;
@@ -30,27 +20,43 @@ import com.sentrysoftware.matrix.model.parameter.ParameterState;
 import com.sentrysoftware.matrix.model.parameter.PresentParam;
 import com.sentrysoftware.matrix.model.parameter.StatusParam;
 
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_TYPE;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.POWER_CONSUMPTION_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.POWER_CONSUMPTION_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PRESENT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.STATUS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.USAGE_COUNT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.USAGE_COUNT_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.VALUE_PARAMETER;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
+
 public class OtherDevice implements IMetaMonitor {
 
 	private static final String UNKNOWN = "Unknown.";
 
 	public static final MetaParameter USAGE_COUNT = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.USAGE_COUNT_PARAMETER)
-			.unit(HardwareConstants.USAGE_COUNT_PARAMETER_UNIT)
+			.name(USAGE_COUNT_PARAMETER)
+			.unit(USAGE_COUNT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter VALUE = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.VALUE_PARAMETER)
+			.name(VALUE_PARAMETER)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter POWER_CONSUMPTION = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.POWER_CONSUMPTION_PARAMETER)
-			.unit(HardwareConstants.POWER_CONSUMPTION_PARAMETER_UNIT)
+			.name(POWER_CONSUMPTION_PARAMETER)
+			.unit(POWER_CONSUMPTION_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
@@ -72,18 +78,18 @@ public class OtherDevice implements IMetaMonitor {
 	static {
 		final Map<String, MetaParameter> map = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		map.put(HardwareConstants.STATUS_PARAMETER, STATUS);
-		map.put(HardwareConstants.PRESENT_PARAMETER, PRESENT);
-		map.put(HardwareConstants.USAGE_COUNT_PARAMETER, USAGE_COUNT);
-		map.put(HardwareConstants.VALUE_PARAMETER, VALUE);
-		map.put(HardwareConstants.POWER_CONSUMPTION_PARAMETER, POWER_CONSUMPTION);
+		map.put(STATUS_PARAMETER, STATUS);
+		map.put(PRESENT_PARAMETER, PRESENT);
+		map.put(USAGE_COUNT_PARAMETER, USAGE_COUNT);
+		map.put(VALUE_PARAMETER, VALUE);
+		map.put(POWER_CONSUMPTION_PARAMETER, POWER_CONSUMPTION);
 
 		META_PARAMETERS = Collections.unmodifiableMap(map);
 
 		final Map<String, List<AlertRule>> alertRulesMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		alertRulesMap.put(HardwareConstants.PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
+		alertRulesMap.put(PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
+		alertRulesMap.put(STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
 
 		ALERT_RULES = Collections.unmodifiableMap(alertRulesMap);
 	}
@@ -117,7 +123,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -138,7 +144,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkValueWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(HardwareConstants.VALUE_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(VALUE_PARAMETER, conditions);
 		if (assertedValue.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -159,7 +165,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkValueAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(HardwareConstants.VALUE_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(VALUE_PARAMETER, conditions);
 		if (assertedValue.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -180,7 +186,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkUsageCountWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(HardwareConstants.USAGE_COUNT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(USAGE_COUNT_PARAMETER, conditions);
 		if (assertedValue.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -201,7 +207,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkUsageCountAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(HardwareConstants.USAGE_COUNT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedValue = monitor.assertNumberParameter(USAGE_COUNT_PARAMETER, conditions);
 		if (assertedValue.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -222,7 +228,7 @@ public class OtherDevice implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
